--- a/src/Components/styles/Header.module.css
+++ b/src/Components/styles/Header.module.css
@@ -1,9 +1,9 @@
-.header_container{
-    width: 100vw;
+.header_container {
     height: 8vh;
     background-color: #5A6272;
 }
-.dark_header_container{
+
+.dark_header_container {
     width: 100vw;
     height: 8vh;
     background-color: black;
@@ -17,21 +17,22 @@
     box-shadow: 10px 5px 10px rgb(186, 186, 186);
     background-color: rgba(31, 84, 127, 0.399);
 }
-.burger{
-    display : none;
+
+.burger {
+    display: none;
 }
 
-@media screen and (max-width :720px){
-    .navBarContainer{
+@media screen and (max-width :720px) {
+    .navBarContainer {
         display: none;
     }
 
-    .burger{
-        display : flex;
+    .burger {
+        display: flex;
         position: absolute;
-        top : 0%;
-        left : 0%;
-        z-index : 100;
+        top: 0%;
+        left: 0%;
+        z-index: 100;
 
     }
 }
@@ -90,7 +91,7 @@
     left: 0;
     border-top: 2px solid transparent;
     border-left: 2px solid transparent;
-    
+
 }
 
 
@@ -108,10 +109,10 @@
     width: 10px;
     height: 10px;
     border-color: #070707;
-    
+
 }
 
-.darklinkNavBar{
+.darklinkNavBar {
     text-decoration: none;
     list-style-type: none;
     display: block;
@@ -147,7 +148,7 @@
     left: 0;
     border-top: 2px solid transparent;
     border-left: 2px solid transparent;
-    
+
 }
 
 
@@ -165,7 +166,7 @@
     width: 10px;
     height: 10px;
     border-color: white;
-    
+
 }
 
 @media screen and (min-width:650) {
@@ -175,3 +176,26 @@
 }
 
 
+.buttonDarkMode {
+    width: 5rem;
+    height: 2rem;
+    background-color: rgba(255, 252, 252, 0);
+    position: absolute;
+    right: 2%;
+    top: 3%;
+    border: none;
+    color: white;
+
+}
+
+.buttonLightMode {
+    width: 5rem;
+    height: 2rem;
+    background-color: rgba(255, 255, 255, 0);
+    position: absolute;
+    border: none;
+    right: 2%;
+    top: 3%;
+
+
+}
