--- a/src/Components/styles/ProjectCards.module.css
+++ b/src/Components/styles/ProjectCards.module.css
@@ -2,15 +2,32 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 80vw;
+    max-width: 35vw;
+    margin-top: 2rem;
+    padding: 2rem;
     height: fit-content;
-    background: rgba(209, 209, 209, 0.2);
     border: none;
-    border-radius: 5px;
-    box-shadow: 10px 5px 10px rgb(186, 186, 186);
+    border-radius: 50px;
     gap: 2rem;
-    background: rgba(201, 201, 201, 0.739);
+    background: #bababa;
+    box-shadow: 20px -20px 60px #9e9e9e,
+        -20px 20px 60px #d6d6d6;
+}
 
+.project_container_dark {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    max-width: 35vw;
+    margin-top: 2rem;
+    padding: 2rem;
+    height: fit-content;
+    border: none;
+    border-radius: 50px;
+    gap: 2rem;
+    background: #4f4f4f;
+    box-shadow: 20px -20px 60px #434343,
+        -20px 20px 60px #5b5b5b;
 }
 
 .project_container:hover {
@@ -22,23 +39,50 @@
     font-size: 25px;
 }
 
+.project_title_dark {
+    font-size: 25px;
+    color: rgb(167, 167, 167);
+}
+
 .info_container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     height: 20rem;
+    gap: 1.5rem;
+}
+
+.info_container_dark {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 20rem;
+    gap: 1.5rem;
 
 }
 
 .project_text {
     width: 35%;
-    font-size: 1.54rem;
+    font-size: 1.2rem;
+}
+
+.project_text_dark {
+    width: 35%;
+    font-size: 1.2rem;
+    color: rgb(167, 167, 167);
+
 }
 
 .project_img {
+    height: 60%;
+    width: auto;
+}
 
-    height: 70%;
+
+.project_img_dark {
+    height: 60%;
     width: auto;
 }
 
