--- a/src/pages/styles/Home.module.css
+++ b/src/pages/styles/Home.module.css
@@ -3,6 +3,16 @@
     width: 100vw;
     font-size: 32px;
     position: relative;
+    background-color: #bababa;
+
+}
+
+.home_container_dark {
+    height: 90vh;
+    width: 100vw;
+    font-size: 32px;
+    position: relative;
+    background-color: #4f4f4f;
 
 }
 
@@ -13,8 +23,25 @@
     top: 10%;
     left: 10%;
     border-radius: 50%;
-    background-position: center;
-    box-shadow: 10px 5px 10px rgba(186, 186, 186, 0.389);
+    /* background-position: center;
+    box-shadow: 10px 5px 10px rgba(186, 186, 186, 0.389); */
+    background: #bababa;
+    box-shadow: 20px -20px 60px #9e9e9e,
+        -20px 20px 60px #d6d6d6;
+}
+
+.homepage_img_dark {
+    height: 25vw;
+    width: 25vw;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    border-radius: 50%;
+    /* background-position: center;
+    box-shadow: 10px 5px 10px rgba(186, 186, 186, 0.389); */
+    background: #4f4f4f;
+    box-shadow: 20px -20px 60px #434343,
+        -20px 20px 60px #5b5b5b;
 }
 
 .homepage_txt {
@@ -24,38 +51,34 @@
     bottom: 10%;
     right: 5%;
     text-align: start;
-    background: rgba(201, 201, 201, 0.739);
     border: none;
-    border-radius: 5px;
-    box-shadow: 10px 5px 10px rgb(186, 186, 186);
-    padding: 0.5rem;
+    padding: 2rem;
     font-size: 25px;
-
+    border-radius: 50px;
+    background: #bababa;
+    box-shadow: 20px -20px 60px #9e9e9e,
+        -20px 20px 60px #d6d6d6;
 }
 
-.buttonDarkMode {
-    width: 5rem;
-    height: 2rem;
-    background-color: rgba(255, 252, 252, 0);
+.homepage_txt_dark {
+    height: auto;
+    width: 45vw;
     position: absolute;
-    right: 2%;
-    top: 2%;
+    bottom: 10%;
+    right: 5%;
+    text-align: start;
     border: none;
-    color: white;
-
+    padding: 2rem;
+    font-size: 25px;
+    color: rgb(167, 167, 167);
+    border-radius: 50px;
+    background: #4f4f4f;
+    box-shadow: 20px -20px 60px #434343,
+        -20px 20px 60px #5b5b5b;
 }
 
-.buttonLightMode {
-    width: 5rem;
-    height: 2rem;
-    background-color: rgba(255, 255, 255, 0);
-    position: absolute;
-    border: none;
-    right: 2%;
-    top: 2%;
 
 
-}
 @media screen and (max-width : 720px) {
     .home_container {
         position: initial;
@@ -64,12 +87,20 @@
         align-items: center;
         justify-content: space-evenly;
     }
-    .homepage_txt{
+
+    .homepage_txt {
         position: initial;
         font-size: 20px;
         width: 85vw;
     }
-    .homepage_img{
+
+    .homepage_txt_dark {
+        position: initial;
+        font-size: 20px;
+        width: 85vw;
+    }
+
+    .homepage_img {
         position: initial;
         height: 40vw;
         width: 40vw;
@@ -78,11 +109,15 @@
 }
 
 @media screen and (min-width : 1024px) {
-  
-    .homepage_txt{
+
+    .homepage_txt {
+        font-size: 30px;
+
+    }
+
+    .homepage_txt_dark {
         font-size: 30px;
 
     }
 
 }
-
