--- a/src/Components/styles/Header.module.css
+++ b/src/Components/styles/Header.module.css
@@ -1,13 +1,32 @@
 .header_container {
     height: 8vh;
-    background-color: #5A6272;
+    background: linear-gradient(175deg, #588ef3, #ffffff);
+    background-size: 120% 120%;
+    animation: gradient-animation 8s ease infinite;
 }
 
 .dark_header_container {
     width: 100vw;
     height: 8vh;
-    background-color: black;
+    background: linear-gradient(139deg, #000000, #03295f);
+    background-size: 120% 120%;
+    animation: gradient-animation 8s ease infinite;
 }
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 
 .navBarContainer {
     height: 8vh;
@@ -177,25 +196,20 @@
 
 
 .buttonDarkMode {
-    width: 5rem;
+    width: 7rem;
     height: 2rem;
     background-color: rgba(255, 252, 252, 0);
-    position: absolute;
-    right: 2%;
-    top: 3%;
     border: none;
     color: white;
 
 }
 
 .buttonLightMode {
-    width: 5rem;
+    width: 7rem;
     height: 2rem;
     background-color: rgba(255, 255, 255, 0);
-    position: absolute;
     border: none;
-    right: 2%;
-    top: 3%;
+
 
 
 }
