--- a/src/Components/styles/ContactForm.module.css
+++ b/src/Components/styles/ContactForm.module.css
@@ -1,4 +1,3 @@
-
 .form_container {
     display: flex;
     flex-direction: column;
@@ -6,15 +5,35 @@
     justify-content: space-evenly;
     width: 80vw;
     height: 70vh;
-    border-radius: 5px;
-    box-shadow: 10px 5px 10px rgb(186, 186, 186);
-    background-color: rgb(233, 232, 232);
+    border-radius: 50px;
+    background: #bababa;
+    box-shadow: 20px -20px 60px #9e9e9e,
+        -20px 20px 60px #d6d6d6;
+    transition: transform 0.3s ease-in-out;
+}
+
+.form_container_dark {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 80vw;
+    height: 70vh;
+    border-radius: 50px;
+    background: #3d3d3d;
+    box-shadow: 20px -20px 60px #434343,
+        -20px 20px 60px #5b5b5b;
+    transition: transform 0.3s ease-in-out;
 }
 
 input {
     width: 75%;
     height: 2rem;
     padding: 0.2rem;
+    border-radius: 5px;
+    border: none;
+
+
 }
 
 textarea {
@@ -26,6 +45,10 @@ textarea {
     box-shadow: 10px 5px 10px rgb(186, 186, 186);
     padding: 0.5rem;
 
+}
+
+.submitButton {
+    width: 15%;
 }
 
 @media screen and (min-width : 1024px) {
