--- a/src/Components/styles/ProjectCards.module.css
+++ b/src/Components/styles/ProjectCards.module.css
@@ -12,13 +12,19 @@
     background: #bababa;
     box-shadow: 20px -20px 60px #9e9e9e,
         -20px 20px 60px #d6d6d6;
+    transition: transform 0.3s ease-in-out;
+}
+
+.project_container:hover {
+    transform: translateY(-100px);
+
 }
 
 .project_container_dark {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    max-width: 35vw;
+    max-width: 25vw;
     margin-top: 2rem;
     padding: 2rem;
     height: fit-content;
@@ -77,7 +83,7 @@
 
 .project_img {
     height: 60%;
-    width: auto;
+
 }
 
 
